create & stylize portfolio section

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,25 @@
 * {
     font-family: $font-main;
     font-style: normal;
+    color: $dark;
 }
 
-@import 'media/_media.scss';
+.container {
+    max-width: $container;
+    width: 100%;
+    margin: 0 auto;
+    
+
+    @media (max-width: $md1) {
+        max-width: none;
+        padding: 0 30px;
+    }
+    @media (max-width: $md6) {
+        padding: 0 20px;
+    }
+}
+
+@import 'sections/_portfolio.scss';
+@import 'media/_media_portfolio.scss';
+
+//@import 'media/_media.scss';
