--- a/src/scss/media/_media_portfolio.scss
+++ b/src/scss/media/_media_portfolio.scss
@@ -7,11 +7,19 @@
         }
         &__item {
             width: 100%;
-            margin: 20px 0 0 0;
+            margin: 30px 0 0 0;
         }
         &__img {
             height: auto;
             max-height: 400px;
+        }
+    }
+    @media (max-width: $md6) {
+        &__tabs {
+            flex-direction: column;
+        }
+        &__tab {
+            margin: 12px 0 0;
         }
     }
 }
