--- a/src/scss/sections/_portfolio.scss
+++ b/src/scss/sections/_portfolio.scss
@@ -30,6 +30,39 @@
         /* identical to box height, or 167% */
         margin-top: 6px;
     }
+    &__tabs {
+        display: flex;
+        justify-content: center;
+        margin-top: 30px;
+    }
+    &__tab {
+        display: inline-block;
+        height: 45px;
+        border: 1px solid $dark;
+        box-shadow: 0px 4px 4px rgba($dark, 0.15);
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 14px;
+        /* identical to box height */
+        text-align: center;
+        transition: 0.4s all;
+        padding: 12px 25px;
+        margin-right: 20px;
+        cursor: pointer;
+
+        &:last-child {
+            margin-right: 0;
+        }
+
+        &:hover {
+            border: 1px solid $accent;
+        }
+
+        &_active {
+            background-color: $accent;
+            border: 1px solid $accent;
+        }
+    }
     &__body {
         display: flex;
         flex-wrap: wrap;
@@ -44,7 +77,7 @@
         display: block;
         max-width: 100%;
         height: 400px;
-        box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.15);
+        box-shadow: 4px 4px 4px rgba($dark, 0.15);
         padding: 20px 20px 30px; 
         margin: 0 auto;
     }
