--- a/src/scss/sections/_modal.scss
+++ b/src/scss/sections/_modal.scss
@@ -12,6 +12,16 @@
 
     img {
         height: 80vh;
-        width: auto;
+        max-width: 100%;
+    }
+
+    &__close {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        font-size: 40px;
+        font-weight: 400;
+        color: $light;
+        background-color: transparent;
     }
 }
