--- a/src/scss/media/_media_portfolio.scss
+++ b/src/scss/media/_media_portfolio.scss
@@ -1,5 +1,9 @@
 .portfolio {
     @media (max-width: $md1) {
+        &__title {
+            font-size: 30px;
+            line-height: 40px;
+        }
         &__body {
             flex-direction: column;
             align-items: center;
